# routes/index.js
@@ -4,12 +4,12 @@ import swagger from './swagger.js';
 
 
 const router = express.Router();
-router.use('/contacts', contacts);
+router.use('/', swagger);
 
 router.get('/', (req, res) => {
-  //$swagger.tags = ['Hello World'];
+  // #swagger.tags = ['Hello World'];
   res.send('Hello, World!');
 });
+router.use('/contacts', contacts);
 
-router.use('/swagger', swagger);
 export default router;
